--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.31.6",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.25",
     "gray-matter": "^4.0.3",
